# vLLM_rag

./: .gitignore  ADVANCED_RAG.md  CHANGELOG_ADVANCED.md  GPU_COMPARISON_SUMMARY.md  Makefile  README.md  RUN_GUIDE.md  api_server.py  concurrent_test.py  config.py  environment.yml  main.py  pyproject.toml  requirements.txt  run.txt
.ipynb_checkpoints/: api_server-checkpoint.py
benchmarks/: README_COMPARISON.md  benchmark.py  compare_results.py  concurrent_test.py  export_to_csv.py  visualize_results.py
benchmarks/reports/: all_benchmarks_comparison.csv  benchmark_NVIDIA_GeForce_RTX_5070_Ti_Laptop_GPU_load_20251210_220148.csv  benchmark_NVIDIA_GeForce_RTX_5070_Ti_Laptop_GPU_load_20251215_005144.csv  benchmark_NVIDIA_GeForce_RTX_5070_Ti_Laptop_GPU_load_20251215_005411.csv  benchmark_NVIDIA_GeForce_RTX_5070_Ti_Laptop_GPU_load_20251215_005634.csv  benchmark_NVIDIA_GeForce_RTX_5090_load_20251211_092611.csv  benchmark_NVIDIA_GeForce_RTX_5090_load_20251211_093121.csv  gpu_comparison.csv
benchmarks/results/: benchmark_NVIDIA_GeForce_RTX_5070_Ti_Laptop_GPU_load_20251210_220148.json  benchmark_NVIDIA_GeForce_RTX_5070_Ti_Laptop_GPU_load_20251215_005144.json  benchmark_NVIDIA_GeForce_RTX_5070_Ti_Laptop_GPU_load_20251215_005411.json  benchmark_NVIDIA_GeForce_RTX_5070_Ti_Laptop_GPU_load_20251215_005634.json  benchmark_NVIDIA_GeForce_RTX_5090_load_20251211_093121.json
src/: llm.py  loader.py  query_translation.py  reranker.py  retriever.py  splitter.py  vectorstore.py
streamlit/: app.py
(+1 files in other folders)
